--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.Canicomhandheld"
         tools:targetApi="31">
         <activity
+            android:name=".SettingScreen"
+            android:exported="false" />
+        <activity
+            android:name=".TrainingScreen"
+            android:exported="false" />
+        <activity
             android:name=".GpsLocation"
             android:exported="false" />
         <activity
