--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Canicomhandheld"
         tools:targetApi="31">
         <activity
+            android:name=".DogList"
+            android:exported="false" />
+        <activity
             android:name=".SettingScreen"
             android:exported="false" />
         <activity
